# src/app.ts
@@ -9,6 +9,7 @@ import userAuthenticationRouter from './rest/route/user-authentication-end-point
 import googleAuthenticationRouter from './rest/route/google-authentication-end-point';
 import userMaintenanceRouter from './rest/route/user-maintenance-end-point';
 import studentRouter from './rest/route/student-end-point';
+import activityCategoryRouter from './rest/route/activity-category-end-point';
 import { errorHandler } from './rest/middleware/error-handler';
 import cookieParser from 'cookie-parser';
 
@@ -38,6 +39,7 @@ app.use('/user-authentications', userAuthenticationRouter);
 app.use('/google-authentications', googleAuthenticationRouter);
 app.use('/users', userMaintenanceRouter);
 app.use('/students', studentRouter);
+app.use('/activity-categories', activityCategoryRouter);
 app.use(errorHandler); // Global error handler
 
 export default app;
