# src/rest/route/activity-category-end-point.ts
@@ -1,0 +1,8 @@
+import { Router } from 'express';
+import { listActivityCategory } from '../controller/activity/list-activity-category';
+
+const router = Router();
+
+router.get('/', listActivityCategory);
+
+export default router;
